printing every element using a loop

--- a/linear.ipynb
+++ b/linear.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -56,19 +56,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "300\n",
+      "500\n",
+      "1000\n",
+      "120\n",
       "300\n"
      ]
     }
    ],
    "source": [
-    "print(prices[0][0])"
+    "#printing every element using a loop\n",
+    "for i in range(len(prices)):\n",
+    "    for j in range(len(prices[i])):\n",
+    "        print(prices[i][j])\n",
+    "    \n",
+    "#print(prices[0][0])"
    ]
   }
  ],
