--- a/linear.ipynb
+++ b/linear.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "#import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -27,6 +27,8 @@
     "prices = [[300,500],\n",
     "[1000,120]]\n",
     "\n",
+    "tan=[1233,4000]\n",
+    "\n",
     "total = [9412.8, 18977.6]\n",
     "\n",
     "prices = np.array(prices)\n",
@@ -38,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,8 +68,7 @@
       "300\n",
       "500\n",
       "1000\n",
-      "120\n",
-      "300\n"
+      "120\n"
      ]
     }
    ],
@@ -79,6 +80,37 @@
     "    \n",
     "#print(prices[0][0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.int64(2369900), np.int64(1713000)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "ans = []\n",
+    "for leg in range(len(prices)):\n",
+    "    row_sum=0\n",
+    "    for col in range(len(prices[leg])):\n",
+    "        row_sum += prices[leg][col]*tan[col]\n",
+    "\n",
+    "    ans.append(row_sum)\n",
+    "print(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
